--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "mocha --recursive ./tests/unit/**/*.test.js --exit",
+    "test:integration": "mocha --recursive ./tests/integration/**/*.test.js --exit",
     "dev": "nodemon app.js"
   },
   "repository": {
@@ -21,5 +22,8 @@
     "botgram": "^2.2.0",
     "mongoose": "^5.4.16",
     "string-similarity": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
   }
 }
